--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,7 +14,7 @@ header{
   align-items: center; /* Align items vertically */
   background-color: #FA5;
   border-radius: 0.8rem;
-  padding: 0 1rem; /* Add some horizontal padding */
+ 
   width: auto; /* Full width for better responsiveness */
   height: 5rem;
   overflow: hidden;
@@ -37,7 +37,7 @@ header{
         color: #eee;
         font-weight: bold;
         text-decoration: none;
-        padding: 1rem 1.5rem;
+        padding: 100% 1.5rem;
         transition: background 0.3s;
 
         &:hover {
